--- a/ball2.html
+++ b/ball2.html
@@ -62,262 +62,37 @@
         const WIDTH = document.body.offsetWidth
         const HEIGHT = document.body.offsetHeight
 
+        const baller = [];
 
-        ball1 = {
-            ballElm: document.getElementById("ball1"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball2 = {
-            ballElm: document.getElementById("ball2"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball3 = {
-            ballElm: document.getElementById("ball3"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball4 = {
-            ballElm: document.getElementById("ball4"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball5 = {
-            ballElm: document.getElementById("ball5"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball6 = {
-            ballElm: document.getElementById("ball6"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball7 = {
-            ballElm: document.getElementById("ball7"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball8 = {
-            ballElm: document.getElementById("ball8"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball9 = {
-            ballElm: document.getElementById("ball9"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball10 = {
-            ballElm: document.getElementById("ball10"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball11 = {
-            ballElm: document.getElementById("ball11"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball12 = {
-            ballElm: document.getElementById("ball12"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball13 = {
-            ballElm: document.getElementById("ball13"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball14 = {
-            ballElm: document.getElementById("ball14"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball15 = {
-            ballElm: document.getElementById("ball15"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball16 = {
-            ballElm: document.getElementById("ball16"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball17 = {
-            ballElm: document.getElementById("ball17"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball18 = {
-            ballElm: document.getElementById("ball18"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball19 = {
-            ballElm: document.getElementById("ball19"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball20 = {
-            ballElm: document.getElementById("ball20"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball21 = {
-            ballElm: document.getElementById("ball21"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball22 = {
-            ballElm: document.getElementById("ball22"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball23 = {
-            ballElm: document.getElementById("ball23"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball24 = {
-            ballElm: document.getElementById("ball24"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball25 = {
-            ballElm: document.getElementById("ball25"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball26 = {
-            ballElm: document.getElementById("ball26"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball27 = {
-            ballElm: document.getElementById("ball27"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball28 = {
-            ballElm: document.getElementById("ball28"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball29 = {
-            ballElm: document.getElementById("ball29"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-        ball30 = {
-            ballElm: document.getElementById("ball30"),
-            venstre: Math.floor(Math.random() * 200),
-            topp: Math.floor(Math.random() * 200),
-            x_fart: Math.floor(Math.random() * 10) + 1,
-            y_fart: Math.floor(Math.random() * 10) + 1,
-        }
-
-
-
-        const baller = [ball1, ball2, ball3, ball4, ball5, ball6, ball7, ball8, ball9, ball10, ball11, ball12, ball13, ball14, ball15, ball16, ball17, ball18, ball19, ball20, ball21, ball22, ball23, ball24, ball25, ball26, ball27, ball28, ball29, ball30]
-
-
-
-        /*
-                function detekterKollisjon(ball) {
-                    // Detekter kollisjon i x-retning:
-                    const BALL_WIDTH = ball.ballElm.offsetWidth
-                    const BALL_HEIGTH = ball.ballElm.offsetHeight
-                    if (ball.venstre >= WIDTH - BALL_WIDTH || ball.venstre <= 0) {
-                        // snu farten:
-                        ball.x_fart *= -1
-                        ball.y_fart *= -1
-                    }
-                    // Detekter kollisjon i y-retning:
-                    if (ball.topp >= HEIGHT - BALL_HEIGTH || ball.topp <= 0) {
-                        // snu farten:
-                        ball.y_fart *= -1
-                        ball.x_fart *= -1
-                    }
-                }
-         */
-
-
-         function getRandomVariation() {
-    return (Math.random() * 2 - 1); // Gir et tall mellom -1 og 1
+for (let i = 1; i <= 30; i++) {
+    baller.push({
+        ballElm: document.getElementById(`ball${i}`),
+        venstre: Math.floor(Math.random() * 200),
+        topp: Math.floor(Math.random() * 200),
+        x_fart: Math.floor(Math.random() * 10) + 1,
+        y_fart: Math.floor(Math.random() * 10) + 1,
+    })
 }
 
-function detekterKollisjon(ball) {
-    const BALL_WIDTH = ball.ballElm.offsetWidth;
-    const BALL_HEIGHT = ball.ballElm.offsetHeight;
 
-    if (ball.venstre >= WIDTH - BALL_WIDTH || ball.venstre <= 0) {
-        ball.x_fart *= -1; // Snu farten
-        ball.x_fart += getRandomVariation(); // Legg til en liten variasjon
-    }
+        function tilfNyFart() {
+            return (Math.random() * 2 - 1); // Gir et tall mellom -1 og 1
+        }
 
-    if (ball.topp >= HEIGHT - BALL_HEIGHT || ball.topp <= 0) {
-        ball.y_fart *= -1; // Snu farten
-        ball.y_fart += getRandomVariation(); // Legg til en liten variasjon
-    }
-}
+        function detekterKollisjon(ball) {
+            const BALL_WIDTH = ball.ballElm.offsetWidth
+            const BALL_HEIGHT = ball.ballElm.offsetHeight
+
+            if (ball.venstre >= WIDTH - BALL_WIDTH || ball.venstre <= 0) {
+                ball.x_fart *= -1
+                ball.x_fart += tilfNyFart()
+            }
+
+            if (ball.topp >= HEIGHT - BALL_HEIGHT || ball.topp <= 0) {
+                ball.y_fart *= -1
+                ball.y_fart += tilfNyFart()
+            }
+        }
 
 
         function flyttBall(ball) {
