--- a/index.html
+++ b/index.html
@@ -1,51 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="spill.css">
+    <title>BallSprett</title>
     <style>
-        * {
+        body {
+            height: 100vh;
             margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        .gridContainer {
-            display: grid;
-            grid-template-columns: auto auto auto;
-            grid-template-rows: ;
-            grid-gap: 10px;
-            padding: 10px;
-            background-color: #2196F3;
-            color: white;
+            /* Overflow hidden gjør at vi unngår scrollbars når 
+               ballen er så vidt utenfor skjermen*/
+            overflow: hidden;
         }
 
-        h1 {
-            font-size: 24px;
-        }
-
-        p {
-            font-size: 18px;
+        .ball {
+            width: 200px;
+            height: 200px;
+            /* MERK: Vi må sette en height for at offsetHeight skal fungere */
+            position: absolute;
+            left: 50px;
+            top: 50px
         }
     </style>
 </head>
+
 <body>
+    <img src="ball.png" alt="ball" id="ball1" class="ball">
+    <img src="ball.png" alt="ball" id="ball2" class="ball">
+    <img src="ball.png" alt="ball" id="ball3" class="ball">
+    <img src="ball.png" alt="ball" id="ball4" class="ball">
+    <img src="ball.png" alt="ball" id="ball5" class="ball">
+    <img src="ball.png" alt="ball" id="ball6" class="ball">
+    <img src="ball.png" alt="ball" id="ball7" class="ball">
+    <img src="ball.png" alt="ball" id="ball8" class="ball">
+    <img src="ball.png" alt="ball" id="ball9" class="ball">
+    <img src="ball.png" alt="ball" id="ball10" class="ball">
+    <img src="ball.png" alt="ball" id="ball11" class="ball">
+    <img src="ball.png" alt="ball" id="ball12" class="ball">
+    <img src="ball.png" alt="ball" id="ball13" class="ball">
+    <img src="ball.png" alt="ball" id="ball14" class="ball">
+    <img src="ball.png" alt="ball" id="ball15" class="ball">
+    <img src="ball.png" alt="ball" id="ball16" class="ball">
+    <img src="ball.png" alt="ball" id="ball17" class="ball">
+    <img src="ball.png" alt="ball" id="ball18" class="ball">
+    <img src="ball.png" alt="ball" id="ball19" class="ball">
+    <img src="ball.png" alt="ball" id="ball20" class="ball">
+    <img src="ball.png" alt="ball" id="ball21" class="ball">
+    <img src="ball.png" alt="ball" id="ball22" class="ball">
+    <img src="ball.png" alt="ball" id="ball23" class="ball">
+    <img src="ball.png" alt="ball" id="ball24" class="ball">
+    <img src="ball.png" alt="ball" id="ball25" class="ball">
+    <img src="ball.png" alt="ball" id="ball26" class="ball">
+    <img src="ball.png" alt="ball" id="ball27" class="ball">
+    <img src="ball.png" alt="ball" id="ball28" class="ball">
+    <img src="ball.png" alt="ball" id="ball29" class="ball">
+    <img src="ball.png" alt="ball" id="ball30" class="ball">
 
-        <div class="gridContainer">
-            <div>
-                <h1>Wanted spill</h1>
-                <p>klikk på emojien som er Wanted</p>
-            </div>
-            <div>
-                <p>klikk på denne emojien:</p>
-                <p>👨</p>
-            </div>
-            <div id="spillBrett"></div>
-        </div>
+
+    <script>
+        const WIDTH = document.body.offsetWidth
+        const HEIGHT = document.body.offsetHeight
+
+        const baller = [];
+
+for (let i = 1; i <= 30; i++) {
+    baller.push({
+        ballElm: document.getElementById(`ball${i}`),
+        venstre: Math.floor(Math.random() * 200),
+        topp: Math.floor(Math.random() * 200),
+        x_fart: Math.floor(Math.random() * 10) + 1,
+        y_fart: Math.floor(Math.random() * 10) + 1,
+    })
+}
 
 
+        function tilfNyFart() {
+            return (Math.random() * 2 - 1); // Gir et tall mellom -1 og 1
+        }
 
-    <script src="spill.js"></script>
+        function detekterKollisjon(ball) {
+            const BALL_WIDTH = ball.ballElm.offsetWidth
+            const BALL_HEIGHT = ball.ballElm.offsetHeight
+
+            if (ball.venstre >= WIDTH - BALL_WIDTH || ball.venstre <= 0) {
+                ball.x_fart *= -1
+                ball.x_fart += tilfNyFart()
+            }
+
+            if (ball.topp >= HEIGHT - BALL_HEIGHT || ball.topp <= 0) {
+                ball.y_fart *= -1
+                ball.y_fart += tilfNyFart()
+            }
+        }
+
+
+        function flyttBall(ball) {
+            // Flytt på ballen:
+            ball.venstre += ball.x_fart
+            ball.topp += ball.y_fart
+            ball.ballElm.style.left = ball.venstre + "px"
+            ball.ballElm.style.top = ball.topp + "px"
+        }
+
+        function oppdater() {
+            for (let ball of baller) {
+                detekterKollisjon(ball)
+                flyttBall(ball)
+            }
+
+
+            requestAnimationFrame(oppdater)
+        }
+
+        oppdater()
+
+    </script>
 </body>
+
 </html>
