--- a/spill.html
+++ b/spill.html
@@ -32,7 +32,7 @@
             <img src="bilder/Ansikt3.png" alt="ball" id="ball11" class="ball">
             <img src="bilder/Ansikt4.png" alt="ball" id="ball12" class="ball">
             <img src="bilder/Ansikt5.png" alt="ball" id="ball13" class="ball">
-            <img src="bilder/TargettAnsikt.png" alt="ball" id="ball14" class="ball"> <!--Jeg har lagt target i midten så noen ansikt overlapper og noen underlapper--> 
+            <img src="bilder/TargettAnsikt.png" alt="ball" id="ball14" class="ball target"> <!--Jeg har lagt target i midten så noen ansikt overlapper og noen underlapper--> 
             <img src="bilder/Ansikt7.png" alt="ball" id="ball15" class="ball">
             <img src="bilder/Ansikt8.png" alt="ball" id="ball16" class="ball">
             <img src="bilder/Ansikt1.png" alt="ball" id="ball17" class="ball">
